# search

./: .gitignore  README.md  autogen.sh  configure.in
src/: Makefile.am  boyer_moore.c  brute_force.c  fuzzy.c  karp_rabin.c  search.c  search.h  srch_test.c  test.rb
test/: egprub  prubni  test.txt  vysledky.txt
