# Process this file with autoconf to produce a configure script.

AC_INIT(src/search.c)
AM_INIT_AUTOMAKE(search, 0.1)
AM_CONFIG_HEADER(config.h)

AC_ARG_ENABLE(debug,
	      [--enable-debug turn on debugging (default=disable)],
	      CFLAGS="$CFLAGS -g -Wall -W") 

# this is only for libraries
AC_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

# Checks for libraries.
AC_CHECK_LIB(containers, lst_new)
	     

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h unistd.h list.h sys/mman.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_CHECK_FUNCS([strdup])
AC_CHECK_FUNCS([mmap])

AC_OUTPUT(Makefile src/Makefile)

echo
echo Configure results:
echo ------------------
echo "CFLAGS:	$CFLAGS"
echo "LIBS:	$LIBS"
echo
echo "PREFIX:	$prefix"
echo
echo Now "you can type \"make && make install\""
echo

